@@ -392,6 +392,13 @@ check_compiler_has_flag(
 	HAS_COMPILER_FLAG_WDOCUMENTATION
 )
 
+check_compiler_has_flag(
+	CXX_FLAGS_PEDANTIC_COMPILATION
+	"-Wdocumentation-deprecated-sync"
+	HAS_COMPILER_FLAG_WDOCUMENTATION
+	"-Wno-documentation-deprecated-sync"
+)
+
 
 ### Set the final compiler flags.
 
