@@ -1,6 +1,8 @@
 Version 1.11.8+dev:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bug fixes:
+   * Added -Wno-documentation-deprecated-sync to the CMake pedantic flags.
 
 Version 1.11.8:
  * Add-ons client:
